# AVAP_Lite_oss

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTENT.md  LICENSE  Makefile  PERFORMANCE.md  README.md  ROADMAP.md  avap.proto  docker-compose.yaml  init copy.sql  init.sql  mock_brain.py  pyproject.toml  requirements.txt  test.avap
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/core/: avap_pb2.py  avap_pb2_grpc.py
src/: lib.rs  main.py
tests/: bench_internal.py  bench_internal_2.py  locustfile.py  locustfile2.py  locustfile3.py  test_avap.py  test_basic.py
