[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "avap_lite"
version = "0.1.0"
description = "AVAP Lite high-performance execution server with Rust VM"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AVAP Framework Team" }
]
dependencies = [
    "tornado>=6.3",
    "asyncpg>=0.28",
    "redis>=5.0",
]

[tool.maturin]
# Este nombre DEBE coincidir con el [lib] name de tu Cargo.toml
module-name = "avap_lite_core"
# Indicamos que el código de Python está en la raíz o carpeta actual
python-source = "."
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B"]